--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,3 +1,9 @@
 {
-	"diagnostic.checkCurrentLine": true
+	"diagnostic.messageTarget": "float",
+	"diagnostic.checkCurrentLine": true,
+	"diagnostic.virtualText": true,
+	"diagnostic.virtualTextCurrentLineOnly": false,
+	"diagnostic.virtualTextPrefix": "<- ",
+	"typescript.suggest.autoImports": true,
+	"javascript.suggest.autoImports": true
 }
